--- a/cp_backend/src/main/resources/application.properties
+++ b/cp_backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=0202
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
